# target-duckdb

./: .gitignore  CHANGELOG.md  Makefile  pyproject.toml
archive/target_duckdb/: __init__.py
singer_duckdb/: config.py  connector.py  exceptions.py  sink.py
target_duckdb/: __init__.py  connector.py  db_sync.py  sink.py  stream.py  tap.py  target.py
tests/: __init__.py  conftest.py  test_duckdb.py  test_tap.py  test_target.py
tests/integration/: test_target_duckdb.py  utils.py
tests/unit/: test_db_sync.py  test_target_duckdb.py
