[tool.poetry]
name = "target-duckdb"
version = "0.4.0"
description = "A Singer tap and target for DuckDB, built with the Meltano SDK."
authors = ["Meltano"]
license = "Apache 2.0"

[tool.poetry.dependencies]
python = ">=3.7.1,<3.11"
duckdb = "0.7.1"
duckdb-engine = "0.7.0"

# inflection = '>=0.3.1'
# singer-python = '>=5.0.12'
# sqlalchemy = '==1.3.0'

# singer-sdk = {path = "../sdk", develop = true}
singer-sdk = "^0.22.1"

[tool.poetry.dev-dependencies]
pytest = "^6.1.2"
freezegun = "^1.1.0"
flake8 = "^3.9.2"
flake8-bugbear = "^21.9.1"
black = "^21.9b0"
mypy = "^0.920"
tox = "^3.24.5"
isort = "^5.10.1"
pylint = "^2.13.9"
pytest-cov = "^3.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
# CLI declarations
target-duckdb = 'target_duckdb:DuckDBTarget.cli'
tap-duckdb = 'target_duckdb:DuckDBTap.cli'
